# corrigenda

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUE_LEDGER.md  MIGRATION.md  PLAN_V2.md  PROGRESS_V1.md  README.md  REMEDIATION_STATUS.md  ROADMAP.md  SECURITY.md  SPECS.md  SPECS_LIB_V2.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  hf-sync.yml  publish-alto-core.yml  publish-corrigenda.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.in  requirements.txt
backend/app/: frontend_static.py  main.py
backend/tests/: test_api.py  test_api_hygiene.py  test_audit_backend_fixes.py  test_audit_f_wave2_fixes.py  test_audit_f_wave3_fixes.py  test_cancellation.py  test_chained_hyphenation.py  test_chunk_planner.py  test_corpus_present.py  test_corpus_validation.py  test_deployment_profile.py  test_double_dash.py  test_frontend_expected.py  test_health_and_rate_limit.py  test_hyphenation.py  test_integration.py  test_line_acceptance.py  test_log_redaction_and_job_token.py  test_logging_config.py  test_parser.py  (+28 more)
docs/: API.md  ROADMAP_LIB_V3.md
examples/: X0000002.xml
frontend/: .dockerignore  .size-limit.json  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi.snapshot.json  package-lock.json  package.json  vitest.config.ts
scripts/: benchmark.py  export_dalembert_onnx.py  export_masked_lm_onnx.py  fit_qe_calibration.py  generate-frontend-api-types.sh  qe_benchmark.py  qe_data.py  release-alto-core.sh  release-corrigenda.sh
(+126 files in other folders)
